--- a/packages/ui/zarf.yaml
+++ b/packages/ui/zarf.yaml
@@ -85,6 +85,12 @@ components:
         after:
           - wait:
               cluster:
+                kind: Job
+                name: ui-migrations-###ZARF_PKG_TMPL_IMAGE_VERSION###
+                namespace: leapfrogai
+                condition: complete
+          - wait:
+              cluster:
                 kind: Deployment
                 name: leapfrogai-ui
                 namespace: leapfrogai
