--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -92,10 +92,7 @@ jobs:
             python -m pip install requests
             python -m pytest ./tests/e2e/test_supabase.py -v
 
-        # This cleanup may need to be moved/removed when other packages depend on Supabase
-        - name: Cleanup Supabase
-          run: |
-            uds zarf package remove supabase -l=trace --confirm
+
 
         ##########
         # API
@@ -106,7 +103,7 @@ jobs:
             docker image prune -af
             uds zarf package deploy packages/api/zarf-package-leapfrogai-api-amd64-e2e-test.tar.zst --set=EXPOSE_OPENAPI_SCHEMA=true --confirm
             rm packages/api/zarf-package-leapfrogai-api-amd64-e2e-test.tar.zst
-            
+
         - name: Set environment variable
           id: set-env-var
           run: |
@@ -116,6 +113,11 @@ jobs:
           run: |
             python -m pip install requests
             python -m pytest ./tests/e2e/test_api.py -v
+
+        # This cleanup may need to be moved/removed when other packages depend on Supabase
+        - name: Cleanup Supabase
+          run: |
+            uds zarf package remove supabase -l=trace --confir
 
         ##########
         # llama
@@ -170,7 +172,6 @@ jobs:
         - name: Cleanup whisper
           run: |
             uds zarf package remove whisper -l=trace --confirm
-
 
         ##########
         # vLLM
