--- a/packages/ui/zarf.yaml
+++ b/packages/ui/zarf.yaml
@@ -1,3 +1,5 @@
+# yaml-language-server: $schema=https://raw.githubusercontent.com/defenseunicorns/uds-cli/v0.14.0/zarf.schema.json
+
 kind: ZarfPackageConfig
 metadata:
   name: leapfrogai-ui
